// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`account selection recovery > identifies selected-account data as unavailable after account selection > account-picker:account-error 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:account-error" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "We could not read the selected account data."
root/div[0]/div[0]/div[0]/a[0] href="/api/google-ads/start"
root/div[0]/div[0]/div[0]/a[0]/text "Reconnect"
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;

exports[`account selection recovery > preserves the account-list explanation when listing accounts fails > account-picker:list-error 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:list-error" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "We could not read the account list. This can happen when the account does not yet have Google Ads API access or when the connection has expired."
root/div[0]/div[0]/div[0]/p[2]
root/div[0]/div[0]/div[0]/p[2]/text "list failed"
root/div[0]/div[0]/div[0]/a[0] href="/api/google-ads/start"
root/div[0]/div[0]/div[0]/a[0]/text "Reconnect"
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;

exports[`account selection recovery > renders the successful picker state through the canonical contract > account-picker:success-zero 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:success" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "The Google account you connected has no Google Ads account that we can analyze. If you manage the store with another Google account, connect that one instead."
root/div[0]/div[0]/div[0]/a[0] href="/api/google-ads/start"
root/div[0]/div[0]/div[0]/a[0]/text "Try another Google account"
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;

exports[`account selection recovery > seals the complete demo picker text > account-picker:demo 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:success" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "We found one account. Choose the store you want us to analyze."
root/div[0]/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/div[0]/form[0] action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[0] type="hidden" name="customerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[1] type="hidden" name="name" value="<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[2] type="hidden" name="loginCustomerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0] type="submit"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]/text "<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]/text "<IDENTIFIER> · RON"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0] aria-hidden="true"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0]/path[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;

exports[`account selection recovery > seals the complete picker text for many account results > account-picker:success-many 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:success" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "We found 2 accounts. Choose the store you want us to analyze."
root/div[0]/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/div[0]/form[0] action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[0] type="hidden" name="customerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[1] type="hidden" name="name" value="<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[2] type="hidden" name="loginCustomerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0] type="submit"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]/text "<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]/text "<IDENTIFIER> · RON"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0] aria-hidden="true"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0]/path[0]
root/div[0]/div[0]/div[0]/div[0]/form[1] action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)"
root/div[0]/div[0]/div[0]/div[0]/form[1]/input[0] type="hidden" name="customerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[1]/input[1] type="hidden" name="name" value="<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[1]/input[2] type="hidden" name="loginCustomerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0] type="submit"
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/span[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/span[0]/span[0]/text "<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/span[0]/span[1]
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/span[0]/span[1]/text "<IDENTIFIER> · EUR"
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/svg[0] aria-hidden="true"
root/div[0]/div[0]/div[0]/div[0]/form[1]/button[0]/svg[0]/path[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;

exports[`account selection recovery > seals the complete picker text for one account results > account-picker:success-one 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="account-picker:success" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0] href="/google-ads"
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 1 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Which account should we analyze?"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "We found one account. Choose the store you want us to analyze."
root/div[0]/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/div[0]/form[0] action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[0] type="hidden" name="customerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[1] type="hidden" name="name" value="<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/input[2] type="hidden" name="loginCustomerId" value="<IDENTIFIER>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0] type="submit"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[0]/text "<ACCOUNT>"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/span[0]/span[1]/text "<IDENTIFIER> · RON"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0] aria-hidden="true"
root/div[0]/div[0]/div[0]/div[0]/form[0]/button[0]/svg[0]/path[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "The app reads the data required for the audit: accessible Google Ads accounts, including their identifier, name, manager status, and currency, the selected account time zone, products and their Shopping performance, conversion tracking configuration, campaign structure, Performance Max campaigns, Shopping campaigns, Search campaigns, negative keywords, search terms, and account totals for the last 365 days. We do not change anything, and you can revoke access at any time from your Google account.""
`;
